WebCore:

Reviewed by Sam Weinig.

        - fix http://bugs.webkit.org/show_bug.cgi?id=16348
          @font-face does not affect the default style

        Test: fast/css/font-face-default-font.html

        * dom/Document.cpp:
        (WebCore::Document::recalcStyle): Pass our font selector to
        Font::update() if we already have one.

LayoutTests:

        Reviewed by Sam Weinig.

        - test for http://bugs.webkit.org/show_bug.cgi?id=16348
          @font-face does not affect the default style

        * fast/css/font-face-default-font.html: Added.
        * platform/mac-leopard/fast/css: Added.
        * platform/mac-leopard/fast/css/font-face-default-font-expected.checksum: Added.
        * platform/mac-leopard/fast/css/font-face-default-font-expected.png: Added.
        * platform/mac/fast/css/font-face-default-font-expected.txt: Added.



Canonical link: https://commits.webkit.org/22438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28555 268f45cc-cd09-0410-ab3c-d52691b4dbfc